<resources>
    <string name="app_name" translatable="false">Smart Forecast</string>
    <string name="service_name_open_weather_map" translatable="false">OpenWeatherMap</string>
    <string name="shared_image" translatable="false">changelogImage</string>
    <string name="title_activity_city_picker">List of cities</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="timeStamp">Updated</string>
    <string name="pressure_measure">mmHg</string>
    <string name="pressure_measure_hpa">HPa</string>
    <string name="wind_measure_m_s"><![CDATA[<sup><small>m</small></sup>/<small>s</small>]]></string>
    <string name="wind_measure_km_h"><![CDATA[<sup><small>km</small></sup>/<small>h</small>]]></string>
    <string name="wind_measure_mph">mph</string>
    <string name="wind_measure_fps">fps</string>
    <string name="clear_sky">Clear sky</string>
    <string name="few_clouds">Partly cloudy</string>
    <string name="scattered_clouds">Cloudy</string>
    <string name="broken_clouds">Cloudy with clearings</string>
    <string name="shower_rain">Heavy rain</string>
    <string name="rain">Rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="clear_favorite">To remove all cities</string>
    <string name="refresh">Refresh</string>
    <string name="change_location">Change Location</string>
    <string name="city_exist">The city is already present at the list.</string>
    <string name="update_error_location_not_found">The city is absent in the list of locations.</string>
    <string name="update_error_net_not_available">Error of updating! The network is inaccessible.</string>
    <string name="update_error_from">"Error of updating of weather from station "</string>
    <string name="coordinates_not_found">Coordinates of location %1$s aren\'t found.\nThe location isn\'t added</string>
    <string name="msg_add_city">To continue, you must add the city.</string>
    <string name="msg_choose_city">To continue, select a city.</string>
    <string name="msg_no_city">The city is not in the list of locations.</string>
    <string name="msg_clear_city_list">Do you want to clear the list of cities?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="title_choose_city">Enter the name of the city</string>
    <string name="btn_ok">OK</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_cancel">Cancel</string>
    <string name="error_empty_location_name">You must enter the name of the location</string>
    <string name="CELSIUS">°C</string>
    <string name="FAHRENHEIT">°F</string>
    <string name="KELVIN">" K"</string>
    <string name="infoTV">Add a city \nto display the weather forecast.</string>
    <string name="incorrect_city_error">Incorrect city name</string>
    <string name="about_gps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="drawer_item_current_place">Current place</string>
    <string name="drawer_item_city_list">List of cities</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_feedback">Feedback</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_invite">Invite friends</string>
    <string name="error_service_not_available">The coordinates of current location are not detected.</string>
    <string name="error_geo_service_not_available">The coordinates of the location are not detected.</string>
    <string name="invalid_lang_long_used">Error of detection coordinates for a location</string>
    <string name="no_address_found">Address of current location is not found</string>
    <string name="location_manager">Location Manager</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_enable_gps">Use GPS</string>
    <string name="pref_description_enable_gps">Use GPS to determine your location</string>
    <string name="pref_gps_key" translatable="false">gps_switch</string>
    <string name="pref_gps_default" translatable="false">true</string>
    <string name="pref_title_units">Temperature Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_celsius" translatable="false">celsius</string>
    <string name="pref_units_kelvin" translatable="false">kelvin</string>
    <string name="pref_units_fahrenheit" translatable="false">fahrenheit</string>
    <string name="error_gps_permission">Out of the rights to use the gps and resources service provider</string>
    <string name="clear_new_location_name">Clear the input field</string>
    <string name="coordinates_error">Not correct location coordinates</string>
    <string name="error_gps_disabled">In application settings disabled the ability to get the coordinates from the GPS</string>
    <string name="error_location_services_are_not_active">Services of receipt of coordinates are not active</string>
    <string name="info_message_about_request_permission_fine_location">Application need rights for determining the current location</string>
    <string name="button_permission_granted">Allowed</string>
    <string name="button_permission_not_granted">Denied</string>
    <string name="welcome_def_str">"Hello "</string>
    <string name="welcome_string_hello">"Glad to see you "</string>
    <string name="welcome_string_morning">"Good morning "</string>
    <string name="welcome_string_day">"Good afternoon "</string>
    <string name="welcome_string_evening">"Good evening "</string>
    <string name="activate_geographical_service">Check tuning of telephone and program. There is no available services for obtaining of coordinates.\n\nTo open phone settings to activate services of location determination?</string>
    <string name="pref_title_location">At a start to show a weather for</string>
    <string name="pref_location_key" translatable="false">default_location</string>
    <string name="pref_location_current" translatable="false">current_location</string>
    <string name="pref_location_last" translatable="false">last_location</string>
    <string name="pref_location_label_current">The Current location</string>
    <string name="pref_location_label_last">The Last active location</string>
    <string name="pref_title_welcome_string">Greeting line</string>
    <string name="pref_welcome_key" translatable="false">welcome_string</string>
    <string name="pref_welcome_off" translatable="false">welcome_off</string>
    <string name="pref_welcome_default" translatable="false">welcome_default</string>
    <string name="pref_welcome_off_label">The greeting is disabled</string>
    <string name="pref_welcome_default_label">The greeting is enabled</string>
    <string name="pref_units_label_celsius">Celsius degree (°C)</string>
    <string name="pref_units_label_kelvin">Kelvin degree (K)</string>
    <string name="pref_units_label_fahrenheit">Fahrenheit degree (°F)</string>
    <string name="pref_title_speed">Units of wind speed measure</string>
    <string name="pref_speed_key" translatable="false">wind_speed</string>
    <string name="pref_speed_meter_sec" translatable="false">meter_sec</string>
    <string name="pref_speed_foot_sec" translatable="false">foot_sec</string>
    <string name="pref_speed_km_hour" translatable="false">km_hour</string>
    <string name="pref_speed_mile_hour" translatable="false">mile_hour</string>
    <string name="pref_speed_meter_sec_label">Meter per second (m/s)</string>
    <string name="pref_speed_foot_sec_label">Foot per second (f/s)</string>
    <string name="pref_speed_km_hour_label">Kilometers per hour (km/h)</string>
    <string name="pref_speed_mile_hour_label">Miles per hour (Mph)</string>
    <string name="pref_welcome_summary">To show the greeting line at the start of the program</string>
    <string name="pref_welcome_key_switch" translatable="false">welcome_string_switch</string>
    <string name="pref_welcome_default_switch" translatable="false">true</string>
    <string name="pref_category_location">Search of location</string>
    <string name="pref_category_start">Parameters of start</string>
    <string name="pref_category_general">General</string>
    <string name="warning_message_gps">The use of GPS can increase the speed of discharge of the battery, however, will certainly increase the location accuracy</string>
    <string name="error_get_coordinates">Can\'t determine the coordinates of the requested location</string>
    <string name="shared_last_active_position_name" translatable="false">last_active_position_name</string>
    <string name="forecast_unavailable">Forecast unavailable</string>
    <string name="pref_header_personalization">Personalization</string>
    <string name="pref_night_mode_key" translatable="false">night_mode</string>
    <string name="pref_night_mode_title">The theme</string>
    <string name="pref_night_mode_off_label">Day theme</string>
    <string name="pref_night_mode_on_label">Night theme</string>
    <string name="pref_night_mode_auto_label">Based on the time of day</string>
    <string name="pref_night_mode_off" translatable="false">night_mode_off</string>
    <string name="pref_night_mode_on" translatable="false">night_mode_on</string>
    <string name="pref_night_mode_auto" translatable="false">night_mode_auto</string>
    <string name="pref_color_scheme_key" translatable="false">color_scheme</string>
    <string name="pref_color_scheme_title">Color scheme</string>
    <string name="pref_color_scheme_green_label">Green</string>
    <string name="pref_color_scheme_brown_label">Brown</string>
    <string name="pref_color_scheme_teal_label">Turquoise</string>
    <string name="pref_color_scheme_indigo_label">Dark blue</string>
    <string name="pref_color_scheme_purple_label">Purple</string>
    <string name="pref_color_scheme_green" translatable="false">color_scheme_green</string>
    <string name="pref_color_scheme_brown" translatable="false">color_scheme_brown</string>
    <string name="pref_color_scheme_teal" translatable="false">color_scheme_teal</string>
    <string name="pref_color_scheme_indigo" translatable="false">color_scheme_indigo</string>
    <string name="pref_color_scheme_purple" translatable="false">color_scheme_purple</string>
    <string name="pref_icons_set_key" translatable="false">icons_set</string>
    <string name="pref_icons_set_title">Set of icons</string>
    <string name="pref_icons_set_default_label">Standard set</string>
    <string name="pref_icons_set_mike_color_label">Set the color scheme</string>
    <string name="pref_icons_set_mike_bw_label">Black and white set</string>
    <string name="pref_icons_set_default" translatable="false">icon_set_default</string>
    <string name="pref_icons_set_mike_color" translatable="false">icons_set_mike_color</string>
    <string name="pref_icons_set_mike_bw" translatable="false">icons_set_mike_bw</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
</resources>